[package]
name = "branch"
version = "0.10.0"
authors = ["Daniel Inkpen <dan2552@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
regex = "1.1.9"
state = { version = "0.1.0", features = ["tls"] }
shell = { version = "0.1.0", git = "https://github.com/google/rust-shell" }
termion = "1.5.3"
prettytable-rs = "0.8.0"
